wip: added builder class
added start of builder class which generates the DMG

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,8 @@ list(APPEND app_SOURCES
     src/SplashScreen.h
     src/PreviewWidget.cpp
     src/PreviewWidget.h
+    src/Builder.cpp
+    src/Builder.h
 
     src/app.qrc
     assets/dmgee.icns
