wip: ribbon & python
added styling for checkbox in ribbon bar
added source assets for checkboxes and drop icons
disabled qt keywords as incompatible with python
modified SplashScreen and MainWindow to be singletons
added custom qt message handler (for debug purposes)
cleaned up MainWindow.ui which had some unused properties for the ribbon widgets
Python now runs in its own thread

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,10 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
+# disable Qt keyboards as they clash with Python
+
+ADD_DEFINITIONS(-DQT_NO_KEYWORDS)
+
 # list of packages we need for the application
 
 find_package(Python3 COMPONENTS Development REQUIRED)
