wip: global changes.
added spinner for busy indicator on status bar
added progress bar on status bar
added state label on status bar
removed demo code from index.html
added override of lib.f.openWindow which allows us to catch hyperlink clicks and pass over the web channel
added ansi escape sequence class
added FlatTabBar+FlatTabWidget class which draws in a style that matches the application (used by the console)
added define command line switch (to be used by placeholder text objects)
updated contributing.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,12 @@ list(APPEND app_SOURCES
     src/HTermApi.cpp
     src/HTermApi.h
     src/hterm.qrc
+    src/FlatTabBar.cpp
+    src/FlatTabBar.h
+    src/FlatTabWidget.h
+    src/FlatTabWidget.cpp
+    src/AnsiEscape.cpp
+    src/AnsiEscape.h
 
     src/app.qrc
     icons/dmgee.icns
@@ -199,6 +205,7 @@ set(APPLICATION_QT_LIBRARIES
     Core
     Gui
     Widgets
+    QuickWidgets
     WebEngineWidgets
 )
 
