wip: context menu + refactoring
terminal context menu now works, options to clear the terminal or copy the output.
MainWIndow has had substantial refactoring, lambda expressions are now member functions where it makes more sense, code is cleaner.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,8 @@ list(APPEND app_SOURCES
     src/FlatTabWidget.cpp
     src/AnsiEscape.cpp
     src/AnsiEscape.h
+    src/ThemeSupport.mm
+    src/ThemeSupport.h
 
     src/app.qrc
     icons/dmgee.icns
