wip: configuration properties
Builder class now implements NOTIFY on most parameters, this allows the preview widget to connect to slots and react to configuration changes in realtime.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,6 +121,8 @@ list(APPEND app_SOURCES
     src/GeneralSettingsPage.cpp
     src/GeneralSettingsPage.h
     src/GeneralSettingsPage.ui
+    src/GridGraphicsScene.cpp
+    src/GridGraphicsScene.h
 
     src/app.qrc
     icons/dmgee.icns
