wip: licence work
added ThemedOutlineView which is a container for QTreeView that has a macOS style.
added checks on creating new files or saving, a native macOS messagebox will appear to warn the user about losing changes.
refactor of LicenseTemplatesSettingsPage to LicenceTemplatesSettingsPage to UK english spelling
Tidied up ImageLoader
added license files from "https://github.com/github/choosealicense.com".
added CMake code to automatically generate a qrc containing any licence in the licences folder.
the licence settings page uses yaml-cpp to read the licences and extract the metadata and licence text.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "thirdparty/tomlplusplus"]
 	path = thirdparty/tomlplusplus
 	url = https://github.com/marzer/tomlplusplus.git
+[submodule "thirdparty/yaml-cpp"]
+	path = thirdparty/yaml-cpp
+	url = https://github.com/jbeder/yaml-cpp.git
