wip: licence preferences
licence page is now mostly functional.
OutlineView is now rendering correctly and handles mouse button presses on the buttons.
added BulletWIdget which provides a coloured dot next to text and is used on the licences page.
uses rules.yaml from choosealicence.com to provide tooltip information.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "thirdparty/yaml-cpp"]
 	path = thirdparty/yaml-cpp
 	url = https://github.com/jbeder/yaml-cpp.git
+[submodule "licences/choosealicence.com"]
+	path = licences/choosealicence.com
+	url = https://github.com/github/choosealicense.com
